--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ input, button {
 }
 
 .stop {
-    overflow-x: hidden;
+    overflow: auto;
 }
 
 .stop__active {
@@ -78,8 +78,6 @@ input, button {
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
-    justify-content: center;
     width: 100%;
     height: 100%;
     background: rgba(41,41,41,0.3);
@@ -574,9 +572,14 @@ input, button {
     transform: scale(1.2);
 }
 
+.popup {
+    display: flex;
+    justify-content: center;
+}
+
 .modal__window {
     position: absolute;
-    top: 5%;
+    top: 3%;
     max-width: 650px;
     padding: 25px 45px 23px 45px;
     background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
